# DIBJudge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.omx/: metrics.json
configs/: finetune_deepspeed.yaml  finetune_deepspeed_4B.yaml  finetune_deepspeed_4B_disable_z_prompt.yaml  finetune_deepspeed_8B.yaml  finetune_deepspeed_bias_ablation.yaml  finetune_deepspeed_bt_ablation.yaml  finetune_deepspeed_lora_baseline.yaml  finetune_deepspeed_sft_baseline.yaml  finetune_deepspeed_shuffle_ablation.yaml  finetune_fsdp.yaml  previous.yaml
dibjudge/: __init__.py  bottlenecks.py  data.py  finetune_deepspeed.py  finetune_deepspeed_sft.py  finetune_fsdp.py  infer_vllm_dibjudge.py  modeling.py  print_collate.py  proxy_tasks.py  smoke_test.py  swanlab_utils.py  train.py  vq.py
scripts/: ablation_exp.sbatch  clean_judge_prompt.py  convert_deepspeed_to_hf.py  convert_zero_to_hf.py  convet_to_hf.py  deepspeed_ablation.sbatch  dibjudge_evaluation.py  env.sh  eval_stats.py  fa2_debug.sbatch  launch_hyper_params.sh  precompute_proxy_metrics.py  precompute_proxy_metrics.sh  preprocess_data.py  replicate_evaluation.py  replicate_evaluation.sh  slurm_base_bias_evaluation.sbatch  slurm_base_evaluation.sbatch  slurm_deepspeed_4B.sbatch  slurm_deepspeed_4B_disable_z_prompt.sbatch  slurm_deepspeed_8B.sbatch  slurm_deepspeed_lora.sbatch  slurm_deepspeed_lora_baseline.sbatch  slurm_deepspeed_lora_replace.sbatch  slurm_deepspeed_sft_baseline.sbatch  slurm_dibjudge_evaluation.sbatch  slurm_fsdp_lora.sbatch  slurm_vanilla_evaluation.sbatch  test_re.py  vanilla_evaluation.py
(+33 files in other folders)
