[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dibjudge"
version = "0.1.0"
description = "DIBJudge: mitigating translationese bias in multilingual LLM-as-a-Judge."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "DIBJudge authors"}
]

[tool.setuptools.packages.find]
include = ["dibjudge*"]
